--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -43,6 +43,7 @@ body
   @apply flex;
   @apply flex-col;
   @apply bg-atysa-primary;
+  @apply -z-50
 }
 
 
@@ -71,3 +72,45 @@ body
 *::-webkit-scrollbar-thumb:hover {
   background-color: #000000;
 }
+
+
+.box {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  left: 0; right: 0; margin: 50px auto;
+  box-sizing: border-box;
+  box-shadow: 0 0 5px rgba(0,0,0,.5);
+}
+.effect {
+  height: auto;
+  font: 2em sans-serif;
+  padding: .8em;
+  color: #fff;
+  background: rgba(0,0,0,.5);
+  overflow: hidden;
+  box-shadow: none;
+  border-radius: 0 0 50% 0;
+}
+
+/* support backdrop-filter */
+@supports ( (-webkit-backdrop-filter: blur(1px)) or (backdrop-filter: blur(1px)) ) {
+  .effect {
+    -webkit-backdrop-filter: blur(5px);
+            backdrop-filter: blur(5px);
+  }
+}
+
+/* no support backdrop-filter */
+@supports ( not ( (-webkit-backdrop-filter: blur(1px)) or (backdrop-filter: blur(1px)) ) ) {
+  .effect {
+    -webkit-filter: url(#backdrop-filter-blur);
+            filter: url(#backdrop-filter-blur);
+  }
+}
+
+
+svg {
+  position: absolute;
+}
+  
