--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -157,3 +157,15 @@ body
   }
 }
 
+
+
+.path {
+  stroke-dasharray: 100;
+  animation: dash 5s linear;
+}
+
+@keyframes dash {
+  to {
+    stroke-dashoffset: 1000;
+  }
+}
