--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -38,6 +38,11 @@
 {
   overflow:hidden
 }
+.absolute-center 
+{
+  @apply absolute;
+  @apply left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2;
+}
 
 /* @font-face {
   font-family: 'Iransans';
