changes to choosetime

--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -32,9 +32,12 @@
 
 .overflow-overlay 
 {
-  overflow:overlay
+  overflow: overlay
 }
-
+.overflow-hidden 
+{
+  overflow: hidden
+}
 .absolute-center 
 {
   @apply absolute;
