--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -66,6 +66,8 @@ input[type=number] {
   @apply min-h-screen;
   @apply flex;
   @apply flex-col;
+  @apply justify-center;
+  @apply items-center;
   @apply bg-atysa-primary;
   @apply -z-50
 }
