--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -66,7 +66,7 @@ input[type=number] {
   @apply min-h-screen;
   @apply flex;
   @apply flex-col;
-  @apply justify-center;
+  @apply justify-start;
   @apply items-center;
   @apply bg-atysa-primary;
   @apply -z-50
