--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -11,7 +11,7 @@
   }
   @font-face {
     font-family: 'Iransans';
-    src: local('Iransans'), url("/fonts/iransansFanumLight.woff") format('woff');
+    src: local('Iransans'), url("/fonts/IRANSansWeb(FaNum)_Medium.woff") format('woff');
       font-weight: 400;
       font-display: swap;
       font-style: normal;
